--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
-	<head></head>
+<html lang="en" ng-app="asm">
+	<head>
+		<meta charset="utf-8">
+	</head>
 	<body>
 		<div>Site Under Construction.......</div>
+		<script src="resources/scripts/premium/angular.js"></script>
+		<script src="resources/scripts/premium/app.js"></script>
 	</body>
 </html>
